--- a/PartBench/BuildGuidePage.xaml
+++ b/PartBench/BuildGuidePage.xaml
@@ -23,7 +23,7 @@
         </Grid.RowDefinitions>
 
         <!--Nav Bar | Left-->
-        <muxc:NavigationView CompactModeThresholdWidth="0" Header="Home" Background="#3d3d3d" x:Name="NavView" Grid.RowSpan="2" IsTitleBarAutoPaddingEnabled="False" IsBackEnabled="True" BackRequested="NavView_BackRequested" OpenPaneLength="280" PaneClosing="NavView_PaneClosing" PaneOpening="NavView_PaneOpening">
+        <muxc:NavigationView CompactModeThresholdWidth="0" Header="Build Guides" Background="#3d3d3d" x:Name="NavView" Grid.RowSpan="2" IsTitleBarAutoPaddingEnabled="False" IsBackEnabled="True" BackRequested="NavView_BackRequested" OpenPaneLength="300" PaneClosing="NavView_PaneClosing" PaneOpening="NavView_PaneOpening">
             <muxc:NavigationView.MenuItems>
                 <muxc:NavigationViewItem x:Name="NavItemHome" Tag="Home" Icon="Home" Content="Home" Tapped="NavItemHome_Tapped"/>
                 <muxc:NavigationViewItemSeparator/>
@@ -49,11 +49,11 @@
                 <ColumnDefinition x:Name="RightPaddingColumn" Width="0"/>
             </Grid.ColumnDefinitions>
             <!--Logo-->
-            <Image Grid.Column="1" Source="/Assets/PBLogo.png" Height="25" Margin="0,8" HorizontalAlignment="Left"/>
+            <Image Grid.Column="1" Source="/Assets/PBLogo.png" Height="24" Margin="40,10,0,0" HorizontalAlignment="Left"/>
         </Grid>
 
         <!--Content Area - Margin.Left Expaned View 330 Colapsed View 90-->
-        <Grid Grid.Row="1" x:Name="ContentContainer"  Margin="330,50,20,20">
+        <Grid Grid.Row="1" x:Name="ContentContainer"  Margin="350,50,20,20">
             <!--All content inside is scrollable-->
             <ScrollViewer Margin="0,30,-20,0">
                 <!--List Of builds-->
@@ -64,25 +64,27 @@
                             <TextBlock TextWrapping="Wrap" TextAlignment="Center" Foreground="Black" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,45" FontWeight="Bold" >Budget AMD Build Guide</TextBlock>
                         </Grid>
                     </Button>
+                    
                     <Button Height="300" Width="250" Background="#e4e4e4" Padding="0" Click="Btn_Click2" Margin="30">
                         <Grid Height="300" Width="250">
                             <Image Source="Assets/sample2.png" HorizontalAlignment="Center" VerticalAlignment="Top" Height="170" Margin="0,20,0,0"></Image>
                             <TextBlock TextWrapping="Wrap" TextAlignment="Center" Foreground="Black" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,45" FontWeight="Bold" >Budget Intel Build Guide</TextBlock>
                         </Grid>
                     </Button>
+                    
                     <Button Height="300" Width="250" Background="#e4e4e4" Padding="0" Click="Btn_Click3" Margin="30">
                         <Grid Height="300" Width="250">
                             <Image Source="Assets/sample3.png" HorizontalAlignment="Center" VerticalAlignment="Top" Height="170" Margin="0,20,0,0"></Image>
                             <TextBlock TextWrapping="Wrap" TextAlignment="Center" Foreground="Black" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,20" FontWeight="Bold" >High-End Intel Build Guide</TextBlock>
                         </Grid>
                     </Button>
+                    
                     <Button Height="300" Width="250" Background="#e4e4e4" Padding="0" Click="Btn_Click4" Margin="30">
                         <Grid Height="300" Width="250">
                             <Image Source="Assets/sample4.png" HorizontalAlignment="Center" VerticalAlignment="Top" Height="170" Margin="0,20,0,0"></Image>
                             <TextBlock TextWrapping="Wrap" TextAlignment="Center" Foreground="Black" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,20" FontWeight="Bold" >High-End AMD Build Guide</TextBlock>
                         </Grid>
                     </Button>
-
                 </VariableSizedWrapGrid>
             </ScrollViewer>
 
@@ -99,7 +101,6 @@
                     </LinearGradientBrush>
                 </Grid.Background>
             </Grid>
-
         </Grid>
     </Grid>
 </Page>
