--- a/PartBench/BuildsPage.xaml
+++ b/PartBench/BuildsPage.xaml
@@ -22,7 +22,7 @@
         </Grid.RowDefinitions>
 
         <!--Nav Bar | Left-->
-        <muxc:NavigationView CompactModeThresholdWidth="0" Header="Home" Background="#3d3d3d" x:Name="NavView" Grid.RowSpan="2" IsTitleBarAutoPaddingEnabled="False" IsBackEnabled="True" BackRequested="NavView_BackRequested" OpenPaneLength="280" PaneClosing="NavView_PaneClosing" PaneOpening="NavView_PaneOpening">
+        <muxc:NavigationView CompactModeThresholdWidth="0" Header="Builds" Background="#3d3d3d" x:Name="NavView" Grid.RowSpan="2" IsTitleBarAutoPaddingEnabled="False" IsBackEnabled="True" BackRequested="NavView_BackRequested" OpenPaneLength="300" PaneClosing="NavView_PaneClosing" PaneOpening="NavView_PaneOpening">
             <muxc:NavigationView.MenuItems>
                 <muxc:NavigationViewItem x:Name="NavItemHome" Tag="Home" Icon="Home" Content="Home" Tapped="NavItemHome_Tapped"/>
                 <muxc:NavigationViewItemSeparator/>
@@ -48,12 +48,11 @@
                 <ColumnDefinition x:Name="RightPaddingColumn" Width="0"/>
             </Grid.ColumnDefinitions>
             <!--Logo-->
-            <Image Grid.Column="1" Source="/Assets/PBLogo.png" Height="25" Margin="0,8" HorizontalAlignment="Left"/>
+            <Image Grid.Column="1" Source="/Assets/PBLogo.png" Height="24" Margin="40,10,0,0" HorizontalAlignment="Left"/>
         </Grid>
-         
-        <!--Content Area - Margin.Left Expaned View 330 Colapsed View 90-->
-        <Grid Grid.Row="1" x:Name="ContentContainer"  Margin="330,50,20,20">
 
+        <!--Content Area - Margin.Left Expaned View 330 Colapsed View 90-->
+        <Grid Grid.Row="1" x:Name="ContentContainer"  Margin="350,50,20,20">
             <!--Column Descriptions-->
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -72,11 +71,8 @@
             <ScrollViewer Margin="0,30,-20,0">
                 <!--List Of builds-->
                 <StackPanel Grid.Row="1" Margin="0,0,20,0">
-                    
                     <!--Break Line-->
                     <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
-                    
-                    
                     <!--Build Row Content-->
                     <Grid Margin="0,0,0,0">
                         <Grid.ColumnDefinitions>
@@ -87,27 +83,9 @@
                         </Grid.ColumnDefinitions>
                         <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 1"/>
                         <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$1500"/>
-                        <Button x:Name="btnEditBuild" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build" Tapped="btnEditBuild_Tapped"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build" Click="btnEditBuild_Click" />
                         <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
                     </Grid>
-                    
-                    
-                    <!--Break Line-->
-                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
-                    <!--Build Row Content-->
-                    <Grid Margin="0,0,0,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="1*"/>
-                            <ColumnDefinition Width="1*"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 2"/>
-                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$2200"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
-                    </Grid>
-
 
                     <!--Break Line-->
                     <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
@@ -121,24 +99,10 @@
                         </Grid.ColumnDefinitions>
                         <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 1"/>
                         <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$1500"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build" Click="btnEditBuild_Click" />
                         <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
                     </Grid>
-                    <!--Break Line-->
-                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
-                    <!--Build Row Content-->
-                    <Grid Margin="0,0,0,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="1*"/>
-                            <ColumnDefinition Width="1*"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 2"/>
-                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$2200"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
-                    </Grid>
+
                     <!--Break Line-->
                     <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
                     <!--Build Row Content-->
@@ -151,24 +115,10 @@
                         </Grid.ColumnDefinitions>
                         <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 1"/>
                         <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$1500"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build" Click="btnEditBuild_Click" />
                         <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
                     </Grid>
-                    <!--Break Line-->
-                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
-                    <!--Build Row Content-->
-                    <Grid Margin="0,0,0,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="1*"/>
-                            <ColumnDefinition Width="1*"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 2"/>
-                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$2200"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
-                    </Grid>
+
                     <!--Break Line-->
                     <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
                     <!--Build Row Content-->
@@ -181,24 +131,10 @@
                         </Grid.ColumnDefinitions>
                         <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 1"/>
                         <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$1500"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build" Click="btnEditBuild_Click" />
                         <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
                     </Grid>
-                    <!--Break Line-->
-                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
-                    <!--Build Row Content-->
-                    <Grid Margin="0,0,0,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="1*"/>
-                            <ColumnDefinition Width="1*"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 2"/>
-                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$2200"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
-                    </Grid>
+
                     <!--Break Line-->
                     <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
                     <!--Build Row Content-->
@@ -211,24 +147,10 @@
                         </Grid.ColumnDefinitions>
                         <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 1"/>
                         <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$1500"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build" Click="btnEditBuild_Click" />
                         <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
                     </Grid>
-                    <!--Break Line-->
-                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
-                    <!--Build Row Content-->
-                    <Grid Margin="0,0,0,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="1*"/>
-                            <ColumnDefinition Width="1*"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 2"/>
-                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$2200"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
-                    </Grid>
+
                     <!--Break Line-->
                     <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
                     <!--Build Row Content-->
@@ -241,9 +163,10 @@
                         </Grid.ColumnDefinitions>
                         <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 1"/>
                         <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$1500"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build" Click="btnEditBuild_Click" />
                         <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
                     </Grid>
+
                     <!--Break Line-->
                     <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
                     <!--Build Row Content-->
@@ -254,15 +177,14 @@
                             <ColumnDefinition Width="1*"/>
                             <ColumnDefinition Width="1*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 2"/>
-                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$2200"/>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 1"/>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$1500"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build" Click="btnEditBuild_Click" />
                         <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
                     </Grid>
 
                     <!--Add Build Button-->
                     <AppBarButton HorizontalAlignment="Stretch" Icon="Add" Height="40" Margin="0,0,0,20"/>
-
                 </StackPanel>
             </ScrollViewer>
 
@@ -279,7 +201,6 @@
                     </LinearGradientBrush>
                 </Grid.Background>
             </Grid>
-
         </Grid>
     </Grid>
 </Page>
