--- a/PartBench/MainPage.xaml
+++ b/PartBench/MainPage.xaml
@@ -22,7 +22,7 @@
         </Grid.RowDefinitions>
 
         <!--Nav Bar | Left-->
-        <muxc:NavigationView CompactModeThresholdWidth="0" Header="Home" Background="#3d3d3d" x:Name="NavView" Grid.RowSpan="2" IsTitleBarAutoPaddingEnabled="False" IsBackEnabled="True" BackRequested="NavView_BackRequested" OpenPaneLength="280" PaneClosing="NavView_PaneClosing" PaneOpening="NavView_PaneOpening">
+        <muxc:NavigationView CompactModeThresholdWidth="0" Header="Home" Background="#3d3d3d" x:Name="NavView" Grid.RowSpan="2" IsTitleBarAutoPaddingEnabled="False" IsBackEnabled="True" BackRequested="NavView_BackRequested" OpenPaneLength="300" PaneClosing="NavView_PaneClosing" PaneOpening="NavView_PaneOpening">
             <muxc:NavigationView.MenuItems>
                 <muxc:NavigationViewItem x:Name="NavItemHome" Tag="Home" Icon="Home" Content="Home" Tapped="NavItemHome_Tapped"/>
                 <muxc:NavigationViewItemSeparator/>
@@ -48,37 +48,36 @@
                 <ColumnDefinition x:Name="RightPaddingColumn" Width="0"/>
             </Grid.ColumnDefinitions>
             <!--Logo-->
-            <Image Grid.Column="1" Source="/Assets/PBLogo.png" Height="25" Margin="0,8" HorizontalAlignment="Left"/>
+            <Image Grid.Column="1" Source="/Assets/PBLogo.png" Height="24" Margin="40,10,0,0" HorizontalAlignment="Left"/>
         </Grid>
 
-        <!--Content Area - Margin.Left Expaned View 330 Colapsed View 90-->
-        <Grid Grid.Row="1" x:Name="ContentContainer"  Margin="330,50,20,20">
+        <!--Content Area - Margin.Left Expaned View 350 Colapsed View 90-->
+        <Grid Grid.Row="1" x:Name="ContentContainer"  Margin="350,50,20,20">
             <ScrollViewer Margin="0,0,-20,0">
                 <StackPanel Margin="0,0,20,0">
-                    
                     <!--Item 1-->
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="auto"/>
                         </Grid.RowDefinitions>
-
+                        <!--Row 1-->
                         <Grid VerticalAlignment="Top" Grid.Column="0" HorizontalAlignment="Left" >
                             <StackPanel VerticalAlignment="Center">
                                 <TextBlock TextWrapping="Wrap" Margin="0,0,0,20" FontSize="50" Text="Build Guides"/>
                                 <TextBlock MaxWidth="300" HorizontalAlignment="Left" Margin="0,0,0,20" TextWrapping="Wrap" Text="Building your own PC and need ideas on where to get started? Explore our build guides which cover systems for a variety of use-cases and budgets."/>
-                                <Button Content="Veiw Build Guides" Background="#ffd500" Foreground="Black"/>
+                                <Button x:Name="btnVeiwBuildGuides" Content="Veiw Build Guides" Background="#ffd500" Foreground="Black" Click="btnVeiwBuildGuides_Click"/>
                             </StackPanel>
                         </Grid>
-
+                        <!--Row 2-->
                         <VariableSizedWrapGrid Orientation="Horizontal" Grid.Row="1"  VerticalAlignment="Top"  Height="auto">
-                            <Button Height="300" Width="250" Background="#e4e4e4" Padding="0" Margin="0,50,50,0">
+                            <Button x:Name="btnBugetAmdGuide"  Height="300" Width="250" Background="#e4e4e4" Padding="0" Margin="0,50,50,0" Click="btnBugetAmdGuide_Click">
                                 <Grid Height="300" Width="250">
                                     <Image Source="Assets/sample.png" HorizontalAlignment="Center" VerticalAlignment="Top" Height="170" Margin="0,20,0,0"></Image>
                                     <TextBlock TextWrapping="Wrap" TextAlignment="Center" Foreground="Black" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,45" FontWeight="Bold" >Budget AMD Build Guide</TextBlock>
                                 </Grid>
                             </Button>
-                            <Button Height="300" Width="250" Background="#e4e4e4" Padding="0" Margin="0,50,50,0">
+                            <Button x:Name="btnHighEndIntelGuide" Height="300" Width="250" Background="#e4e4e4" Padding="0" Margin="0,50,50,0" Click="btnHighEndIntelGuide_Click">
                                 <Grid Height="300" Width="250">
                                     <Image Source="Assets/sample3.png" HorizontalAlignment="Center" VerticalAlignment="Top" Height="170" Margin="0,20,0,0"></Image>
                                     <TextBlock TextWrapping="Wrap" TextAlignment="Center" Foreground="Black" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,20" FontWeight="Bold" >High-End Intel Build Guide</TextBlock>
@@ -93,17 +92,17 @@
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="auto"/>
                         </Grid.RowDefinitions>
-
+                        <!--Row 1-->
                         <Grid VerticalAlignment="Top" Grid.Column="0" HorizontalAlignment="Left" >
                             <StackPanel VerticalAlignment="Center">
                                 <TextBlock Text="Build Your Own Sytem" TextWrapping="Wrap" Margin="0,0,0,20" FontSize="50" />
                                 <TextBlock MaxWidth="300" HorizontalAlignment="Left" Margin="0,0,0,20" TextWrapping="Wrap" Text="Building your own PC and need ideas on where to get started? Explore our build guides which cover systems for a variety of use-cases and budgets."/>
-                                <Button Content="View Builds Page" Background="#ffd500" Foreground="Black"/>
+                                <Button x:Name="btnVeiwBuilds"  Content="View Builds Page" Background="#ffd500" Foreground="Black" Click="btnVeiwBuilds_Click"/>
                             </StackPanel>
                         </Grid>
-
+                        <!--Row 2-->
                         <VariableSizedWrapGrid Orientation="Horizontal" Grid.Row="1"  VerticalAlignment="Top"  Height="auto">
-                            <Button Height="300" Width="250" Background="#e4e4e4" Padding="0" Margin="0,50,50,0">
+                            <Button x:Name="btnBeginBuilding"  Height="300" Width="250" Background="#e4e4e4" Padding="0" Margin="0,50,50,0" Click="btnBeginBuilding_Click">
                                 <Grid Height="300" Width="250">
                                     <Image Source="Assets/sample.png" HorizontalAlignment="Center" VerticalAlignment="Top" Height="170" Margin="0,20,0,0"></Image>
                                     <TextBlock TextWrapping="Wrap" TextAlignment="Center" Foreground="Black" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,45" FontWeight="Bold">Begin Building</TextBlock>
@@ -111,7 +110,6 @@
                             </Button>
                         </VariableSizedWrapGrid>
                     </Grid>
-                    
                 </StackPanel>
             </ScrollViewer>
 
