--- a/PartBench/MainPage.xaml
+++ b/PartBench/MainPage.xaml
@@ -51,81 +51,8 @@
             <Image Grid.Column="1" Source="/Assets/PBLogo.png" Height="24" Margin="40,10,0,0" HorizontalAlignment="Left"/>
         </Grid>
 
-        <!--Content Area - Margin.Left Expaned View 350 Colapsed View 90-->
-        <Grid Grid.Row="1" x:Name="ContentContainer"  Margin="350,50,20,20">
-            <ScrollViewer Margin="0,0,-20,0">
-                <StackPanel Margin="0,0,20,0">
-                    <!--Item 1-->
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="auto"/>
-                            <RowDefinition Height="auto"/>
-                        </Grid.RowDefinitions>
-                        <!--Row 1-->
-                        <Grid VerticalAlignment="Top" Grid.Column="0" HorizontalAlignment="Left" >
-                            <StackPanel VerticalAlignment="Center">
-                                <TextBlock TextWrapping="Wrap" Margin="0,0,0,20" FontSize="50" Text="Build Guides"/>
-                                <TextBlock MaxWidth="300" HorizontalAlignment="Left" Margin="0,0,0,20" TextWrapping="Wrap" Text="Building your own PC and need ideas on where to get started? Explore our build guides which cover systems for a variety of use-cases and budgets."/>
-                                <Button x:Name="btnVeiwBuildGuides" Content="Veiw Build Guides" Background="#ffd500" Foreground="Black" Click="btnVeiwBuildGuides_Click"/>
-                            </StackPanel>
-                        </Grid>
-                        <!--Row 2-->
-                        <VariableSizedWrapGrid Orientation="Horizontal" Grid.Row="1"  VerticalAlignment="Top"  Height="auto">
-                            <Button x:Name="btnBugetAmdGuide"  Height="300" Width="250" Background="#e4e4e4" Padding="0" Margin="0,50,50,0" Click="btnBugetAmdGuide_Click">
-                                <Grid Height="300" Width="250">
-                                    <Image Source="Assets/sample.png" HorizontalAlignment="Center" VerticalAlignment="Top" Height="170" Margin="0,20,0,0"></Image>
-                                    <TextBlock TextWrapping="Wrap" TextAlignment="Center" Foreground="Black" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,45" FontWeight="Bold" >Budget AMD Build Guide</TextBlock>
-                                </Grid>
-                            </Button>
-                            <Button x:Name="btnHighEndIntelGuide" Height="300" Width="250" Background="#e4e4e4" Padding="0" Margin="0,50,50,0" Click="btnHighEndIntelGuide_Click">
-                                <Grid Height="300" Width="250">
-                                    <Image Source="Assets/sample3.png" HorizontalAlignment="Center" VerticalAlignment="Top" Height="170" Margin="0,20,0,0"></Image>
-                                    <TextBlock TextWrapping="Wrap" TextAlignment="Center" Foreground="Black" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,20" FontWeight="Bold" >High-End Intel Build Guide</TextBlock>
-                                </Grid>
-                            </Button>
-                        </VariableSizedWrapGrid>
-                    </Grid>
-                    
-                    <!--Item 2-->
-                    <Grid Margin="0,50,0,50">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="auto"/>
-                            <RowDefinition Height="auto"/>
-                        </Grid.RowDefinitions>
-                        <!--Row 1-->
-                        <Grid VerticalAlignment="Top" Grid.Column="0" HorizontalAlignment="Left" >
-                            <StackPanel VerticalAlignment="Center">
-                                <TextBlock Text="Build Your Own Sytem" TextWrapping="Wrap" Margin="0,0,0,20" FontSize="50" />
-                                <TextBlock MaxWidth="300" HorizontalAlignment="Left" Margin="0,0,0,20" TextWrapping="Wrap" Text="Building your own PC and need ideas on where to get started? Explore our build guides which cover systems for a variety of use-cases and budgets."/>
-                                <Button x:Name="btnVeiwBuilds"  Content="View Builds Page" Background="#ffd500" Foreground="Black" Click="btnVeiwBuilds_Click"/>
-                            </StackPanel>
-                        </Grid>
-                        <!--Row 2-->
-                        <VariableSizedWrapGrid Orientation="Horizontal" Grid.Row="1"  VerticalAlignment="Top"  Height="auto">
-                            <Button x:Name="btnBeginBuilding"  Height="300" Width="250" Background="#e4e4e4" Padding="0" Margin="0,50,50,0" Click="btnBeginBuilding_Click">
-                                <Grid Height="300" Width="250">
-                                    <Image Source="Assets/sample.png" HorizontalAlignment="Center" VerticalAlignment="Top" Height="170" Margin="0,20,0,0"></Image>
-                                    <TextBlock TextWrapping="Wrap" TextAlignment="Center" Foreground="Black" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,45" FontWeight="Bold">Begin Building</TextBlock>
-                                </Grid>
-                            </Button>
-                        </VariableSizedWrapGrid>
-                    </Grid>
-                </StackPanel>
-            </ScrollViewer>
-
-            <!--Grid adds fade out to the content at the botton of content area-->
-            <Grid VerticalAlignment="Bottom" Height="15">
-                <Grid.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="#7F3D3D3D" Offset="0.4"/>
-                        <GradientStop Color="#FF3D3D3D" Offset="0.933"/>
-                        <GradientStop Color="#003D3D3D" Offset="0"/>
-                        <GradientStop Color="#B73D3D3D" Offset="0.527"/>
-                        <GradientStop Color="#E13D3D3D" Offset="0.713"/>
-                        <GradientStop Color="#F93D3D3D" Offset="0.83"/>
-                    </LinearGradientBrush>
-                </Grid.Background>
-            </Grid>
-        </Grid>
+        <Frame x:Name="ContentContainer" Grid.Row="1" Margin="350,50,20,20">
+            
+        </Frame>
     </Grid>
 </Page>
